--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>es.gob.afirma.jmulticard</groupId>
+            <artifactId>jmulticard-base</artifactId>
+            <version>1.8</version>
+        </dependency>
+    </dependencies>
 
 </project>
