--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
-        <dependency>
+<!--        <dependency>
             <groupId>es.gob.afirma.jmulticard</groupId>
             <artifactId>jmulticard-base</artifactId>
             <version>1.8</version>
+        </dependency>-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
         </dependency>
     </dependencies>
 
